--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "typescript-homework-module-3",
+  "name": "goit-advancedjs-hw-07",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "start": "web-dev-server --node-resolve --open --watch"
+  },
   "dependencies": {
-    "typescript": "^5.1.5"
+    "typescript": "^5.1.5",
+    "@web/dev-server": "^0.4.0"
   }
 }
